Support setting environment variables.
This includes a dependency on shellenv to capture the user's environment from their login shell.

--- a/tests/multi-targets/Cargo.toml
+++ b/tests/multi-targets/Cargo.toml
@@ -35,6 +35,10 @@ path = "src/bin/bin2.rs"
 name = "feats"
 path = "src/bin/feats.rs"
 
+[[bin]]
+name = "penv"
+path = "src/bin/penv.rs"
+
 [[example]]
 name = "ex1"
 path = "examples/ex1.rs"
