--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,7 +18,7 @@ install:
     - curl -sSf -o rustup-init.exe https://win.rustup.rs/
     - rustup-init.exe -y --default-toolchain %RUST_VERSION%
     - set PATH=%PATH%;C:\Users\appveyor\.cargo\bin
-    # Ensure nightly is installed to run no-trans, benchmarks, and Clippy.
+    # Ensure nightly is installed to run benchmarks and Clippy.
     - rustup install nightly
     # Install Rust packages needed by integration tests.
     - cargo +nightly install clippy || set RE_SKIP_CLIPPY=1
